--- a/index.html
+++ b/index.html
@@ -3,17 +3,73 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Yeliz Erbas">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2122</title>
-	
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link rel="icon" type="image/svg+xml" href="images/baldski.jpeg">
 </head>
 
+<header>
+	<img src="images/SDMN-banner.png" alt="Sidemen logo banner">
+
+	<p id="banner">Shop now, pay later with Clearpay</p>
+	<iframe src="https://player.vimeo.com/video/643912768?h=c00f2b49d5&byline=0&muted=1&autoplay=1&controls=0&loop=1&background=1&app_id=122963" frameborder="0"></iframe>
+</header>
+
 <body>
-	<h1>Howdy FED2122</h1>
+	<section 1>
+			<h2>NEW ARRIVALS</h2>
+			<button> <img src="images/left-arrow-angle.png" alt="vorige item"></button>
+			<button> <img src="images/right-arrow-angle.png" alt="volgende item"></button>
+	     	<div><a href="https://www.sidemenclothing.com/collections/latest"> VIEW ALL</a></div>
+		
+		<main>
+			 <ul>
+				<li> <img src="images/adventcalendar.png" alt=""> 
+					<p>SDMN XIXmas Advent Calendar</p> </li>
+
+				<li> <img src="images/XIXmasCard.png" alt=""> 
+					<p>SDMN XIXmas Christmas Card</p> </li>
+
+				<li> <img src="images/SDMNxMr.MenCharacterT-ShirtWhite1_360x.png" alt=""> 
+					<p>SDMN x Mr.Men Take Over White T-Shirt</p> </li>
+
+				<li> <img src="images/SDMNxEllesseBlackT-Shirt1_460x.png" alt=""> 
+					<p>SDMN x Mr.Men Take Over Black T-Shirt</p> </li>
+
+				<li> <img src="images/SDMNxEllesseCamoJacket1_460x.png" alt=""> 
+					<p>SDMN X Ellesse Calore oh Jacket</p> </li>
+
+				<li> <img src="images/SDMNxEllesseBlackT-Shirt1_460x.png" alt=""> 
+					<p>SDMN x Ellesse Minimo T-Shirt </p> </li>
+
+				<li> <img src="images/SDMNxEllesseBlackBeanie_360x.png" alt=""> 
+					<p>SDMN x Ellesse Semplicita Beanie</p> </li>
+
+				<li> <img src="images/SDMNxEllesseCamoCap1_360x.png" alt=""> 
+					<p>SDMN x Ellesse Scintilla Cap</p> </li>
+			</ul>
+	 	</main>
+	</section>
+
+	<section 2>
+		<img src="images/Shop_Hoodies_Ellesse_Josh_1024x1024.png" alt="foto van josh met de ellesse hoodie">
+		<button><a href=""></a>shop hoodies</button>
+	</section>
+
+	<section 3>
+		<img src="images/side+_JJ.png" alt="">
+		<img src="images/side+_Harry.png" alt="">
+		<h3>Side+ Live Now</h3>
+		<p>The exclusive membershipsclub.</p>
+		<button>join now</button>
+	</section>
+
+	<section 4>
+		<img src="images/mr.man-banner.png" alt="">
+		<button>shop SDMN x mr.men</button>
+	</section>
 
 	<script src="scripts/script.js"></script>
 </body>
