--- a/index.html
+++ b/index.html
@@ -10,53 +10,79 @@
 	<link rel="icon" type="image/svg+xml" href="images/baldski.jpeg">
 </head>
 
-<header>
-	<img src="images/SDMN-banner.png" alt="Sidemen logo banner">
-
-	<p id="banner">Shop now, pay later with Clearpay</p>
-	<iframe src="https://player.vimeo.com/video/643912768?h=c00f2b49d5&byline=0&muted=1&autoplay=1&controls=0&loop=1&background=1&app_id=122963" frameborder="0"></iframe>
-</header>
-
 <body>
+	<header>
+		<img src="images/SDMN-banner.png" alt="Sidemen logo banner">
+	
+		<p>Shop now, pay later with Clearpay</p>
+		<iframe src="https://player.vimeo.com/video/643912768?h=c00f2b49d5&byline=0&muted=1&autoplay=1&controls=0&loop=1&background=1&app_id=122963" frameborder="0"></iframe>
+	</header>
+
+
+
 	<section 1>
 			<h2>NEW ARRIVALS</h2>
-			<button> <img src="images/left-arrow-angle.png" alt="vorige item"></button>
-			<button> <img src="images/right-arrow-angle.png" alt="volgende item"></button>
-	     	<div><a href="https://www.sidemenclothing.com/collections/latest"> VIEW ALL</a></div>
+
+			<article>
+				<button> <img src="images/left-arrow-angle.png" alt="vorige item"></button>
+				<button> <img src="images/right-arrow-angle.png" alt="volgende item"></button>
+			</article>
+
+	     	<span><a href="https://www.sidemenclothing.com/collections/latest"> VIEW ALL</a></span>
 		
 		<main>
 			 <ul>
 				<li> <img src="images/adventcalendar.png" alt=""> 
-					<p>SDMN XIXmas Advent Calendar</p> </li>
+					<p>SDMN XIXmas Advent Calendar</p>
+					<p>€20,00</p> 	
+					<p>Accessoires</p></li>
 
 				<li> <img src="images/XIXmasCard.png" alt=""> 
-					<p>SDMN XIXmas Christmas Card</p> </li>
+					<p>SDMN XIXmas Christmas Card</p> 
+					<p>€5,00</p> 	
+					<p>Accessoires</p></li>
 
 				<li> <img src="images/SDMNxMr.MenCharacterT-ShirtWhite1_360x.png" alt=""> 
-					<p>SDMN x Mr.Men Take Over White T-Shirt</p> </li>
+					<p>SDMN x Mr.Men Take Over White T-Shirt</p> 
+					<p>€31,00</p> 	
+					<p>Mens</p></li>
 
-				<li> <img src="images/SDMNxEllesseBlackT-Shirt1_460x.png" alt=""> 
-					<p>SDMN x Mr.Men Take Over Black T-Shirt</p> </li>
+				<li> <img src="images/SDMNxMr.MenCharacterT-ShirtBlack1_900x.png" alt=""> 
+					<p>SDMN x Mr.Men Take Over Black T-Shirt</p> 
+					<p>€31,00</p> 	
+					<p>Mens</p></li>
 
 				<li> <img src="images/SDMNxEllesseCamoJacket1_460x.png" alt=""> 
-					<p>SDMN X Ellesse Calore oh Jacket</p> </li>
+					<p>SDMN X Ellesse Calore oh Jacket</p> 
+					<p>€97,00</p> 	
+					<p>Mens</p></li>
 
 				<li> <img src="images/SDMNxEllesseBlackT-Shirt1_460x.png" alt=""> 
-					<p>SDMN x Ellesse Minimo T-Shirt </p> </li>
+					<p>SDMN x Ellesse Minimo T-Shirt </p> 
+					<p>€31,00</p> 	
+					<p>Mens</p></li>
 
 				<li> <img src="images/SDMNxEllesseBlackBeanie_360x.png" alt=""> 
-					<p>SDMN x Ellesse Semplicita Beanie</p> </li>
+					<p>SDMN x Ellesse Semplicita Beanie</p> 
+					<p>€27,00</p> 	
+					<p>Accessoires</p></li>
 
 				<li> <img src="images/SDMNxEllesseCamoCap1_360x.png" alt=""> 
-					<p>SDMN x Ellesse Scintilla Cap</p> </li>
+					<p>SDMN x Ellesse Scintilla Cap</p> 
+					<p>€37,00</p> 	
+					<p>Accessoires</p></li>
 			</ul>
 	 	</main>
 	</section>
+
+
 
 	<section 2>
 		<img src="images/Shop_Hoodies_Ellesse_Josh_1024x1024.png" alt="foto van josh met de ellesse hoodie">
 		<button><a href=""></a>shop hoodies</button>
 	</section>
+
+
 
 	<section 3>
 		<img src="images/side+_JJ.png" alt="">
@@ -66,10 +92,115 @@
 		<button>join now</button>
 	</section>
 
+
+
 	<section 4>
 		<img src="images/mr.man-banner.png" alt="">
 		<button>shop SDMN x mr.men</button>
 	</section>
+
+
+
+	<section carousel 5></section>
+
+
+
+	<section 6>
+			<article><img src="images/SIDEMEN_CHANNEL_1024x1024.png" alt=""> <button><a href="https://www.youtube.com/c/Sidemen"></a>view sidemen channel</button></article>
+			<article><img src="images/MORE_SIDEMEN_1024x1024.png" alt=""> <button><a href="https://www.youtube.com/c/MoreSidemen"></a>view more sidemen</button></article>
+			<article><img src="images/SIDEMEN_REACTS_1024x1024.png" alt=""> <button><a href="https://www.youtube.com/c/SidemenReacts"></a>view sidemen reacts</button></article>
+			<article><img src="images/sidemen_shorts_1024x1024.jpeg" alt=""> <button><a href="https://www.youtube.com/c/SidemenShorts"></a>view sidemen shorts</button></article>
+
+			<ul>
+				<li><button></button></li>
+				<li><button></button></li>
+				<li><button></button></li>
+				<li><button></button></li>
+			</ul>
+
+	</section>
+
+
+
+	<section 7>
+		<img src="images/giftcard.png" alt="cadeaukaart 25 pond">
+		<h3>Unable To Decide?</h3>
+		<p>If you need to play it safe, you can choose a digital giftcard instead.</p>
+		<button>shop giftcards</button>
+	</section>
+
+
+
+	<section 8>
+		<article>
+			<h3>Be The First To Know</h3>
+			<p>Sign up to our emails to receive exclusive drops and discounts.</p>
+			<span><input type="text" placeholder="email@example.com"></span>
+			<button>Subscribe</button>
+
+		</article>
+	</section>
+
+
+
+	<section 9>
+		<button><img src="images/2609558_instagram_social_media_social_icon_1_200x.png" alt=""> <a href=""></a></button>
+		<button><img src="images/4362955_twitter_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
+		<button><img src="images/4362964_facebook_fb_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
+		<button><img src="images/4362958_tiktok_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
+		<button><img src="images/4362957_snapchat_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
+		<button><img src="images/spotify-icon-png-15382_200x.png" alt=""> <a href=""></a></button>
+	</section>
+
+
+
+	<section>
+		<h3>Sidemen Clothing.</h3>
+		<p>The only place you can buy Official Sidemen Merchandise.</p>
+		<p>support@sidemenclothing.com</p>
+		<img src="images/bottom.png" alt="">
+	</section>
+
+
+
+	<footer>
+		<h4>Sitemap</h4>
+			<ul>
+				<li>New</li>
+				<li>Side+</li>
+				<li>SDMN x Ellesse</li>
+				<li>Mens</li>
+				<li>Womens</li>
+				<li>Kids</li>
+				<li>Accessoires</li>
+				<li>Gift Cards</li>
+			</ul>
+
+		<h4>Support</h4>
+			<ul>
+				<li>FAQs</li>
+				<li>Contact Us</li>
+			</ul>
+
+		<h4>Contact Details</h4>
+			<p>support@sidemenclothing.com</p>
+		
+			<article>
+				<button><img src="images/2609558_instagram_social_media_social_icon_1_200x.png" alt=""> <a href=""></a></button>
+				<button><img src="images/4362955_twitter_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
+				<button><img src="images/4362964_facebook_fb_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
+				<button><img src="images/4362958_tiktok_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
+				<button><img src="images/4362957_snapchat_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
+				<button><img src="images/spotify-icon-png-15382_200x.png" alt=""> <a href=""></a></button>
+			</article>
+
+		   <article>
+			   <p>© 2021 Sidemen Clothing. 
+				   Website Developed 
+				   by Yeliz :)</p>
+		   </article>
+		   
+		</footer>
 
 	<script src="scripts/script.js"></script>
 </body>
