--- a/index.html
+++ b/index.html
@@ -8,11 +8,37 @@
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/baldski.jpeg">
+	<title>Home Page</title>
 </head>
 
 <body>
 	<header>
+		<nav>
+			<button aria-hidden="true"><img src="images/menu.png" alt="menu"></button>
+			<ul>
+				<li><button aria-hidden="true"><img src="images/cross.png" alt="klik menu weg"></button></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/new">New</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/sideplus">Side+</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/sdmn-x-ellesse">SDMN x Ellesse</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/types?q=Mens">Mens</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/types?q=Womens">Womens</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/types?q=Kids">Kids</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/extras">Accessoires</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/gift-cards">Gift Cards</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/sales">Sale</a> </li>
+				<li> <a href="https://www.sidemenclothing.com/pages/contact-us">Support</a> </li>
+			</ul>
+
+			<button><img src="images/search.png" alt=""></button>
+			<a href="https://yelizerbas.github.io/FED/"><img src="images/SDMN-banner.png" alt="Sidemen logo banner"></a>
+			<a href="https://www.sidemenclothing.com/account/login"><img src="images/account.png" alt=""></a>
+			<a href="https://www.sidemenclothing.com/cart"><img src="images/shoppingbasket.png" alt=""></a>
+		</nav>
+
+		<!-- <img src="images/search.png" alt="">
 		<img src="images/SDMN-banner.png" alt="Sidemen logo banner">
+		<img src="images/account.png" alt="">
+		<img src="images/shoppingbasket.png" alt=""> -->
 	
 		<p>Shop now, pay later with Clearpay</p>
 		<iframe src="https://player.vimeo.com/video/643912768?h=c00f2b49d5&byline=0&muted=1&autoplay=1&controls=0&loop=1&background=1&app_id=122963" frameborder="0"></iframe>
@@ -23,10 +49,10 @@
 	<section 1>
 			<h2>NEW ARRIVALS</h2>
 
-			<article>
+			<!-- <article>
 				<button> <img src="images/left-arrow-angle.png" alt="vorige item"></button>
 				<button> <img src="images/right-arrow-angle.png" alt="volgende item"></button>
-			</article>
+			</article> -->
 
 	     	<span><a href="https://www.sidemenclothing.com/collections/latest"> VIEW ALL</a></span>
 		
@@ -79,7 +105,7 @@
 
 	<section 2>
 		<img src="images/Shop_Hoodies_Ellesse_Josh_1024x1024.png" alt="foto van josh met de ellesse hoodie">
-		<button><a href=""></a>shop hoodies</button>
+		<a href="https://www.sidemenclothing.com/collections/hoodies">shop hoodies</a>
 	</section>
 
 
@@ -89,14 +115,14 @@
 		<img src="images/side+_Harry.png" alt="">
 		<h3>Side+ Live Now</h3>
 		<p>The exclusive membershipsclub.</p>
-		<button>join now</button>
+		<a href="https://www.sideplus.com/">join now</a>
 	</section>
 
 
 
 	<section 4>
 		<img src="images/mr.man-banner.png" alt="">
-		<button>shop SDMN x mr.men</button>
+		<a href="https://www.sidemenclothing.com/collections/sdmn-x-mr-men">shop SDMN x mr.men</a>
 	</section>
 
 
@@ -106,17 +132,16 @@
 
 
 	<section 6>
-			<article><img src="images/SIDEMEN_CHANNEL_1024x1024.png" alt=""> <button><a href="https://www.youtube.com/c/Sidemen"></a>view sidemen channel</button></article>
-			<article><img src="images/MORE_SIDEMEN_1024x1024.png" alt=""> <button><a href="https://www.youtube.com/c/MoreSidemen"></a>view more sidemen</button></article>
-			<article><img src="images/SIDEMEN_REACTS_1024x1024.png" alt=""> <button><a href="https://www.youtube.com/c/SidemenReacts"></a>view sidemen reacts</button></article>
-			<article><img src="images/sidemen_shorts_1024x1024.jpeg" alt=""> <button><a href="https://www.youtube.com/c/SidemenShorts"></a>view sidemen shorts</button></article>
-
-			<ul>
+			<article><img src="images/SIDEMEN_CHANNEL_1024x1024.png" alt=""> <span><a href="https://www.youtube.com/c/Sidemen">view sidemen channel</a></span></article>
+			<article><img src="images/MORE_SIDEMEN_1024x1024.png" alt=""> <span><a href="https://www.youtube.com/c/MoreSidemen">view more sidemen</a></span></article>
+			<article><img src="images/SIDEMEN_REACTS_1024x1024.png" alt="">  <span><a href="https://www.youtube.com/c/SidemenReacts">view sidemen reacts</a></span></article>
+			<article><img src="images/sidemen_shorts_1024x1024.jpeg" alt=""> <span><a href="https://www.youtube.com/c/SidemenShorts">view sidemen shorts</a></span></article>
+			<!-- <ul>
 				<li><button></button></li>
 				<li><button></button></li>
 				<li><button></button></li>
 				<li><button></button></li>
-			</ul>
+			</ul> -->
 
 	</section>
 
@@ -126,7 +151,7 @@
 		<img src="images/giftcard.png" alt="cadeaukaart 25 pond">
 		<h3>Unable To Decide?</h3>
 		<p>If you need to play it safe, you can choose a digital giftcard instead.</p>
-		<button>shop giftcards</button>
+		<a href="https://www.sidemenclothing.com/collections/gift-cards"> shop giftcards</a>
 	</section>
 
 
@@ -137,19 +162,18 @@
 			<p>Sign up to our emails to receive exclusive drops and discounts.</p>
 			<span><input type="text" placeholder="email@example.com"></span>
 			<button>Subscribe</button>
-
 		</article>
 	</section>
 
 
 
 	<section 9>
-		<button><img src="images/2609558_instagram_social_media_social_icon_1_200x.png" alt=""> <a href=""></a></button>
-		<button><img src="images/4362955_twitter_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
-		<button><img src="images/4362964_facebook_fb_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
-		<button><img src="images/4362958_tiktok_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
-		<button><img src="images/4362957_snapchat_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
-		<button><img src="images/spotify-icon-png-15382_200x.png" alt=""> <a href=""></a></button>
+		<a href="https://www.instagram.com/sidemenclothing/"> <img src="images/2609558_instagram_social_media_social_icon_1_200x.png" alt=""></a>
+		<a href="https://twitter.com/SidemenClothing"> <img src="images/4362955_twitter_logo_social_media_icon_1_200x.png" alt=""></a>
+		<a href="https://www.facebook.com/SidemenClothing/"> <img src="images/4362964_facebook_fb_logo_social_media_icon_1_200x.png" alt=""></a>
+		<a href="https://www.tiktok.com/@sidemenclothing?"> <img src="images/4362958_tiktok_logo_social_media_icon_1_200x.png" alt=""></a>
+		<a href="https://www.snapchat.com/add/sdmnclothing"> <img src="images/4362957_snapchat_logo_social_media_icon_1_200x.png" alt=""></a>
+		<a href="https://open.spotify.com/artist/2Thx0Avafp3zxOHBdFirqk?si=RiZjb_cMTmS4e5gdRLkFaQ&dl_branch=1&nd=1"> <img src="images/spotify-icon-png-15382_200x.png" alt=""></a>
 	</section>
 
 
@@ -166,32 +190,32 @@
 	<footer>
 		<h4>Sitemap</h4>
 			<ul>
-				<li>New</li>
-				<li>Side+</li>
-				<li>SDMN x Ellesse</li>
-				<li>Mens</li>
-				<li>Womens</li>
-				<li>Kids</li>
-				<li>Accessoires</li>
-				<li>Gift Cards</li>
+				<li> <a href="https://www.sidemenclothing.com/collections/new">New</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/sideplus">Side+</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/sdmn-x-ellesse">SDMN x Ellesse</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/types?q=Mens">Mens</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/types?q=Womens">Womens</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/types?q=Kids">Kids</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/extras">Accessoires</a></li>
+				<li> <a href="https://www.sidemenclothing.com/collections/gift-cards">Gift Cards</a></li>
 			</ul>
 
 		<h4>Support</h4>
 			<ul>
-				<li>FAQs</li>
-				<li>Contact Us</li>
+				<li> <a href="https://www.sidemenclothing.com/pages/contact-us">FAQs</a></li>
+				<li> <a href="https://www.sidemenclothing.com/pages/contact-us">Contact Us</a></li>
 			</ul>
 
 		<h4>Contact Details</h4>
 			<p>support@sidemenclothing.com</p>
 		
 			<article>
-				<button><img src="images/2609558_instagram_social_media_social_icon_1_200x.png" alt=""> <a href=""></a></button>
-				<button><img src="images/4362955_twitter_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
-				<button><img src="images/4362964_facebook_fb_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
-				<button><img src="images/4362958_tiktok_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
-				<button><img src="images/4362957_snapchat_logo_social_media_icon_1_200x.png" alt=""> <a href=""></a></button>
-				<button><img src="images/spotify-icon-png-15382_200x.png" alt=""> <a href=""></a></button>
+				<a href="https://www.instagram.com/sidemenclothing/"> <img src="images/2609558_instagram_social_media_social_icon_1_200x.png" alt=""></a>
+				<a href="https://twitter.com/SidemenClothing"> <img src="images/4362955_twitter_logo_social_media_icon_1_200x.png" alt=""></a>
+				<a href="https://www.facebook.com/SidemenClothing/"> <img src="images/4362964_facebook_fb_logo_social_media_icon_1_200x.png" alt=""></a>
+				<a href="https://www.tiktok.com/@sidemenclothing?"> <img src="images/4362958_tiktok_logo_social_media_icon_1_200x.png" alt=""></a>
+				<a href="https://www.snapchat.com/add/sdmnclothing"> <img src="images/4362957_snapchat_logo_social_media_icon_1_200x.png" alt=""></a>
+				<a href="https://open.spotify.com/artist/2Thx0Avafp3zxOHBdFirqk?si=RiZjb_cMTmS4e5gdRLkFaQ&dl_branch=1&nd=1"> <img src="images/spotify-icon-png-15382_200x.png" alt=""></a>
 			</article>
 
 		   <article>
