--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Home Page</title>
 </head>
 
-<body>
+
 	<header>
 		<nav>
 			<button aria-hidden="true"><img src="images/menu.png" alt="menu"></button>
@@ -30,70 +30,62 @@
 			</ul>
 
 			<button><img src="images/search.png" alt=""></button>
-			<a href="https://yelizerbas.github.io/FED/"><img src="images/SDMN-banner.png" alt="Sidemen logo banner"></a>
-			<a href="https://www.sidemenclothing.com/account/login"><img src="images/account.png" alt=""></a>
-			<a href="https://www.sidemenclothing.com/cart"><img src="images/shoppingbasket.png" alt=""></a>
+			<a href="index.html"><img src="images/SDMN-banner.png" alt="Sidemen logo banner"></a>
+			<a href="https://www.sidemenclothing.com/account/login"><img src="images/account.png" alt="account login"></a>
+			<a href="https://www.sidemenclothing.com/cart"><img src="images/shoppingbasket.png" alt="shopping basket"></a>
 		</nav>
 
-		<!-- <img src="images/search.png" alt="">
-		<img src="images/SDMN-banner.png" alt="Sidemen logo banner">
-		<img src="images/account.png" alt="">
-		<img src="images/shoppingbasket.png" alt=""> -->
 	
 		<p>Shop now, pay later with Clearpay</p>
 		<iframe src="https://player.vimeo.com/video/643912768?h=c00f2b49d5&byline=0&muted=1&autoplay=1&controls=0&loop=1&background=1&app_id=122963" frameborder="0"></iframe>
 	</header>
 
 
-
+<body class="pagina1">
 	<section 1>
-			<h2>NEW ARRIVALS</h2>
-
-			<!-- <article>
-				<button> <img src="images/left-arrow-angle.png" alt="vorige item"></button>
-				<button> <img src="images/right-arrow-angle.png" alt="volgende item"></button>
-			</article> -->
+			<h1>NEW ARRIVALS</h1>
 
 	     	<span><a href="https://www.sidemenclothing.com/collections/latest"> VIEW ALL</a></span>
 		
 		<main>
 			 <ul>
-				<li> <img src="images/adventcalendar.png" alt=""> 
+				<li><a href="product.html">
+					<img src="images/ellesse1.png" alt="SDMN x Ellesse Elegante Oh Hoodie"> 
+					<p>SDMN x Ellesse Elegante Oh Hoodie</p>
+					<p>€60,00</p> 	
+					<p>Mens</p></a></li>
+
+				<li> <img src="images/adventcalendar.png" alt="sidemen adventcalendar"> 
 					<p>SDMN XIXmas Advent Calendar</p>
 					<p>€20,00</p> 	
 					<p>Accessoires</p></li>
 
-				<li> <img src="images/XIXmasCard.png" alt=""> 
+				<li> <img src="images/XIXmasCard.png" alt=" XIXmasCard"> 
 					<p>SDMN XIXmas Christmas Card</p> 
 					<p>€5,00</p> 	
 					<p>Accessoires</p></li>
 
-				<li> <img src="images/SDMNxMr.MenCharacterT-ShirtWhite1_360x.png" alt=""> 
+				<li> <img src="images/SDMNxMr.MenCharacterT-ShirtWhite1_360x.png" alt="SDMNxMr.Men White T-Shirt"> 
 					<p>SDMN x Mr.Men Take Over White T-Shirt</p> 
 					<p>€31,00</p> 	
 					<p>Mens</p></li>
 
-				<li> <img src="images/SDMNxMr.MenCharacterT-ShirtBlack1_900x.png" alt=""> 
-					<p>SDMN x Mr.Men Take Over Black T-Shirt</p> 
-					<p>€31,00</p> 	
-					<p>Mens</p></li>
-
-				<li> <img src="images/SDMNxEllesseCamoJacket1_460x.png" alt=""> 
+				<li> <img src="images/SDMNxEllesseCamoJacket1_460x.png" alt="SDMNxEllesse CamoJacket"> 
 					<p>SDMN X Ellesse Calore oh Jacket</p> 
 					<p>€97,00</p> 	
 					<p>Mens</p></li>
 
-				<li> <img src="images/SDMNxEllesseBlackT-Shirt1_460x.png" alt=""> 
+				<li> <img src="images/SDMNxEllesseBlackT-Shirt1_460x.png" alt="SDMNxEllesse Black T-Shirt"> 
 					<p>SDMN x Ellesse Minimo T-Shirt </p> 
 					<p>€31,00</p> 	
 					<p>Mens</p></li>
 
-				<li> <img src="images/SDMNxEllesseBlackBeanie_360x.png" alt=""> 
+				<li> <img src="images/SDMNxEllesseBlackBeanie_360x.png" alt="SDMNxEllesse Black Beanie"> 
 					<p>SDMN x Ellesse Semplicita Beanie</p> 
 					<p>€27,00</p> 	
 					<p>Accessoires</p></li>
 
-				<li> <img src="images/SDMNxEllesseCamoCap1_360x.png" alt=""> 
+				<li> <img src="images/SDMNxEllesseCamoCap1_360x.png" alt="SDMNxEllesse Camo"> 
 					<p>SDMN x Ellesse Scintilla Cap</p> 
 					<p>€37,00</p> 	
 					<p>Accessoires</p></li>
@@ -104,15 +96,16 @@
 
 
 	<section 2>
-		<img src="images/Shop_Hoodies_Ellesse_Josh_1024x1024.png" alt="foto van josh met de ellesse hoodie">
+		<img src="images/Shop_Hoodies_Ellesse_Josh_1024x1024.png" alt="Foto of josh with ellesse hoodie">
 		<a href="https://www.sidemenclothing.com/collections/hoodies">shop hoodies</a>
 	</section>
 
 
 
 	<section 3>
-		<img src="images/side+_JJ.png" alt="">
-		<img src="images/side+_Harry.png" alt="">
+		<div>
+		<img src="images/side+_JJ.png" alt="Jj posing for image with toung out">
+		<img src="images/side+_Harry.png" alt="Harry laughing"></div>
 		<h3>Side+ Live Now</h3>
 		<p>The exclusive membershipsclub.</p>
 		<a href="https://www.sideplus.com/">join now</a>
@@ -121,34 +114,22 @@
 
 
 	<section 4>
-		<img src="images/mr.man-banner.png" alt="">
+		<img src="images/mr.man-banner.png" alt="mr man banner">
 		<a href="https://www.sidemenclothing.com/collections/sdmn-x-mr-men">shop SDMN x mr.men</a>
 	</section>
 
 
-
-	<section carousel 5></section>
-
-
-
-	<section 6>
-			<article><img src="images/SIDEMEN_CHANNEL_1024x1024.png" alt=""> <span><a href="https://www.youtube.com/c/Sidemen">view sidemen channel</a></span></article>
-			<article><img src="images/MORE_SIDEMEN_1024x1024.png" alt=""> <span><a href="https://www.youtube.com/c/MoreSidemen">view more sidemen</a></span></article>
-			<article><img src="images/SIDEMEN_REACTS_1024x1024.png" alt="">  <span><a href="https://www.youtube.com/c/SidemenReacts">view sidemen reacts</a></span></article>
-			<article><img src="images/sidemen_shorts_1024x1024.jpeg" alt=""> <span><a href="https://www.youtube.com/c/SidemenShorts">view sidemen shorts</a></span></article>
-			<!-- <ul>
-				<li><button></button></li>
-				<li><button></button></li>
-				<li><button></button></li>
-				<li><button></button></li>
-			</ul> -->
-
+	<section 5>
+			<article><img src="images/SIDEMEN_CHANNEL_1024x1024.png" alt="Sidemen channel logo"> <span><a href="https://www.youtube.com/c/Sidemen">view sidemen channel</a></span></article>
+			<article><img src="images/MORE_SIDEMEN_1024x1024.png" alt="MoreSidemen channel logo"> <span><a href="https://www.youtube.com/c/MoreSidemen">view more sidemen</a></span></article>
+			<article><img src="images/SIDEMEN_REACTS_1024x1024.png" alt="SidemenReacts channel logo">  <span><a href="https://www.youtube.com/c/SidemenReacts">view sidemen reacts</a></span></article>
+			<article><img src="images/sidemen_shorts_1024x1024.jpeg" alt="SidemenShortschannel logo"> <span><a href="https://www.youtube.com/c/SidemenShorts">view sidemen shorts</a></span></article>
 	</section>
 
 
 
-	<section 7>
-		<img src="images/giftcard.png" alt="cadeaukaart 25 pond">
+	<section 6>
+		<img src="images/giftcard.png" alt="gift-cards 25 pond">
 		<h3>Unable To Decide?</h3>
 		<p>If you need to play it safe, you can choose a digital giftcard instead.</p>
 		<a href="https://www.sidemenclothing.com/collections/gift-cards"> shop giftcards</a>
@@ -156,24 +137,27 @@
 
 
 
-	<section 8>
+	<section 7>
 		<article>
 			<h3>Be The First To Know</h3>
 			<p>Sign up to our emails to receive exclusive drops and discounts.</p>
-			<span><input type="text" placeholder="email@example.com"></span>
-			<button>Subscribe</button>
+			<form>
+				<span><input type="email" placeholder="email@example.com" required></span>
+				<input type="submit"  value="Subscribe">
+			</form>
+			<p id="done"></p>
 		</article>
 	</section>
 
 
 
-	<section 9>
-		<a href="https://www.instagram.com/sidemenclothing/"> <img src="images/2609558_instagram_social_media_social_icon_1_200x.png" alt=""></a>
-		<a href="https://twitter.com/SidemenClothing"> <img src="images/4362955_twitter_logo_social_media_icon_1_200x.png" alt=""></a>
-		<a href="https://www.facebook.com/SidemenClothing/"> <img src="images/4362964_facebook_fb_logo_social_media_icon_1_200x.png" alt=""></a>
-		<a href="https://www.tiktok.com/@sidemenclothing?"> <img src="images/4362958_tiktok_logo_social_media_icon_1_200x.png" alt=""></a>
-		<a href="https://www.snapchat.com/add/sdmnclothing"> <img src="images/4362957_snapchat_logo_social_media_icon_1_200x.png" alt=""></a>
-		<a href="https://open.spotify.com/artist/2Thx0Avafp3zxOHBdFirqk?si=RiZjb_cMTmS4e5gdRLkFaQ&dl_branch=1&nd=1"> <img src="images/spotify-icon-png-15382_200x.png" alt=""></a>
+	<section 8>
+		<a href="https://www.instagram.com/sidemenclothing/"> <img src="images/2609558_instagram_social_media_social_icon_1_200x.png" alt="instagram logo, link to sidemen instagram"></a>
+		<a href="https://twitter.com/SidemenClothing"> <img src="images/4362955_twitter_logo_social_media_icon_1_200x.png" alt="twitter logo, link to sidemen twitter"></a>
+		<a href="https://www.facebook.com/SidemenClothing/"> <img src="images/4362964_facebook_fb_logo_social_media_icon_1_200x.png" alt="facebook logo, link to sidemen facebook"></a>
+		<a href="https://www.tiktok.com/@sidemenclothing?"> <img src="images/4362958_tiktok_logo_social_media_icon_1_200x.png" alt="tiktok logo, link to sidemen tiktok"></a>
+		<a href="https://www.snapchat.com/add/sdmnclothing"> <img src="images/4362957_snapchat_logo_social_media_icon_1_200x.png" alt="snapchat logo, link to sidemen snapchat"></a>
+		<a href="https://open.spotify.com/artist/2Thx0Avafp3zxOHBdFirqk?si=RiZjb_cMTmS4e5gdRLkFaQ&dl_branch=1&nd=1"> <img src="images/spotify-icon-png-15382_200x.png" alt="spotify logo, link to sidemen spotify"></a>
 	</section>
 
 
@@ -182,9 +166,9 @@
 		<h3>Sidemen Clothing.</h3>
 		<p>The only place you can buy Official Sidemen Merchandise.</p>
 		<p>support@sidemenclothing.com</p>
-		<img src="images/bottom.png" alt="">
+		<img src="images/bottom.png" alt="image of eathan ans jj posing wieh sidemenclothing">
 	</section>
-
+</body>
 
 
 	<footer>
@@ -210,12 +194,12 @@
 			<p>support@sidemenclothing.com</p>
 		
 			<article>
-				<a href="https://www.instagram.com/sidemenclothing/"> <img src="images/2609558_instagram_social_media_social_icon_1_200x.png" alt=""></a>
-				<a href="https://twitter.com/SidemenClothing"> <img src="images/4362955_twitter_logo_social_media_icon_1_200x.png" alt=""></a>
-				<a href="https://www.facebook.com/SidemenClothing/"> <img src="images/4362964_facebook_fb_logo_social_media_icon_1_200x.png" alt=""></a>
-				<a href="https://www.tiktok.com/@sidemenclothing?"> <img src="images/4362958_tiktok_logo_social_media_icon_1_200x.png" alt=""></a>
-				<a href="https://www.snapchat.com/add/sdmnclothing"> <img src="images/4362957_snapchat_logo_social_media_icon_1_200x.png" alt=""></a>
-				<a href="https://open.spotify.com/artist/2Thx0Avafp3zxOHBdFirqk?si=RiZjb_cMTmS4e5gdRLkFaQ&dl_branch=1&nd=1"> <img src="images/spotify-icon-png-15382_200x.png" alt=""></a>
+				<a href="https://www.instagram.com/sidemenclothing/"> <img src="images/2609558_instagram_social_media_social_icon_1_200x.png" alt="instagram logo, link to sidemen instagram"></a>
+				<a href="https://twitter.com/SidemenClothing"> <img src="images/4362955_twitter_logo_social_media_icon_1_200x.png" alt="twitter logo, link to sidemen twitter"></a>
+				<a href="https://www.facebook.com/SidemenClothing/"> <img src="images/4362964_facebook_fb_logo_social_media_icon_1_200x.png" alt="facebook logo, link to sidemen facebook"></a>
+				<a href="https://www.tiktok.com/@sidemenclothing?"> <img src="images/4362958_tiktok_logo_social_media_icon_1_200x.png" alt="tiktok logo, link to sidemen tiktok"></a>
+				<a href="https://www.snapchat.com/add/sdmnclothing"> <img src="images/4362957_snapchat_logo_social_media_icon_1_200x.png" alt="snapchat logo, link to sidemen snapchat"></a>
+				<a href="https://open.spotify.com/artist/2Thx0Avafp3zxOHBdFirqk?si=RiZjb_cMTmS4e5gdRLkFaQ&dl_branch=1&nd=1"> <img src="images/spotify-icon-png-15382_200x.png" alt="spotify logo, link to sidemen spotify"></a>
 			</article>
 
 		   <article>
@@ -227,6 +211,5 @@
 		</footer>
 
 	<script src="scripts/script.js"></script>
-</body>
 	
 </html>
