--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 
+
+<body class="pagina1">
 	<header>
 		<nav>
 			<button aria-hidden="true"><img src="images/menu.png" alt="menu"></button>
@@ -39,10 +41,7 @@
 		<p>Shop now, pay later with Clearpay</p>
 		<iframe src="https://player.vimeo.com/video/643912768?h=c00f2b49d5&byline=0&muted=1&autoplay=1&controls=0&loop=1&background=1&app_id=122963" frameborder="0"></iframe>
 	</header>
-
-
-<body class="pagina1">
-	<section 1>
+	<section>
 			<h1>NEW ARRIVALS</h1>
 
 	     	<span><a href="https://www.sidemenclothing.com/collections/latest"> VIEW ALL</a></span>
@@ -95,14 +94,14 @@
 
 
 
-	<section 2>
+	<section>
 		<img src="images/Shop_Hoodies_Ellesse_Josh_1024x1024.png" alt="Foto of josh with ellesse hoodie">
 		<a href="https://www.sidemenclothing.com/collections/hoodies">shop hoodies</a>
 	</section>
 
 
 
-	<section 3>
+	<section>
 		<div>
 		<img src="images/side+_JJ.png" alt="Jj posing for image with toung out">
 		<img src="images/side+_Harry.png" alt="Harry laughing"></div>
@@ -113,13 +112,13 @@
 
 
 
-	<section 4>
+	<section>
 		<img src="images/mr.man-banner.png" alt="mr man banner">
 		<a href="https://www.sidemenclothing.com/collections/sdmn-x-mr-men">shop SDMN x mr.men</a>
 	</section>
 
 
-	<section 5>
+	<section>
 			<article><img src="images/SIDEMEN_CHANNEL_1024x1024.png" alt="Sidemen channel logo"> <span><a href="https://www.youtube.com/c/Sidemen">view sidemen channel</a></span></article>
 			<article><img src="images/MORE_SIDEMEN_1024x1024.png" alt="MoreSidemen channel logo"> <span><a href="https://www.youtube.com/c/MoreSidemen">view more sidemen</a></span></article>
 			<article><img src="images/SIDEMEN_REACTS_1024x1024.png" alt="SidemenReacts channel logo">  <span><a href="https://www.youtube.com/c/SidemenReacts">view sidemen reacts</a></span></article>
@@ -128,7 +127,7 @@
 
 
 
-	<section 6>
+	<section>
 		<img src="images/giftcard.png" alt="gift-cards 25 pond">
 		<h3>Unable To Decide?</h3>
 		<p>If you need to play it safe, you can choose a digital giftcard instead.</p>
@@ -137,7 +136,7 @@
 
 
 
-	<section 7>
+	<section>
 		<article>
 			<h3>Be The First To Know</h3>
 			<p>Sign up to our emails to receive exclusive drops and discounts.</p>
@@ -151,7 +150,7 @@
 
 
 
-	<section 8>
+	<section>
 		<a href="https://www.instagram.com/sidemenclothing/"> <img src="images/2609558_instagram_social_media_social_icon_1_200x.png" alt="instagram logo, link to sidemen instagram"></a>
 		<a href="https://twitter.com/SidemenClothing"> <img src="images/4362955_twitter_logo_social_media_icon_1_200x.png" alt="twitter logo, link to sidemen twitter"></a>
 		<a href="https://www.facebook.com/SidemenClothing/"> <img src="images/4362964_facebook_fb_logo_social_media_icon_1_200x.png" alt="facebook logo, link to sidemen facebook"></a>
@@ -168,7 +167,6 @@
 		<p>support@sidemenclothing.com</p>
 		<img src="images/bottom.png" alt="image of eathan ans jj posing wieh sidemenclothing">
 	</section>
-</body>
 
 
 	<footer>
@@ -209,7 +207,7 @@
 		   </article>
 		   
 		</footer>
-
-	<script src="scripts/script.js"></script>
-	
+		
+		<script src="scripts/script.js"></script>
+</body>
 </html>
