--- a/product.html
+++ b/product.html
@@ -7,33 +7,33 @@
 	<link rel="stylesheet" href="styles/style.css">
 	<link rel="icon" type="image/svg+xml" href="images/baldski.jpeg">
 </head>
-    <header>
-		<nav>
-			<button aria-hidden="true"><img src="images/menu.png" alt="menu"></button>
-			<ul>
-				<li><button aria-hidden="true"><img src="images/cross.png" alt="klik menu weg"></button></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/new">New</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/sideplus">Side+</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/sdmn-x-ellesse">SDMN x Ellesse</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/types?q=Mens">Mens</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/types?q=Womens">Womens</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/types?q=Kids">Kids</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/extras">Accessoires</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/gift-cards">Gift Cards</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/sales">Sale</a> </li>
-				<li> <a href="https://www.sidemenclothing.com/pages/contact-us">Support</a> </li>
-			</ul>
-
-			<button><img src="images/search.png" alt=""></button>
-			<a href="index.html"><img src="images/SDMN-banner.png" alt="Sidemen logo banner"></a>
-			<a href="https://www.sidemenclothing.com/account/login"><img src="images/account.png" alt=""></a>
-			<a href="https://www.sidemenclothing.com/cart"><img src="images/shoppingbasket.png" alt=""></a>
-		</nav>
-	</header>
 
 	<body>
+		<header>
+			<nav>
+				<button aria-hidden="true"><img src="images/menu.png" alt="menu"></button>
+				<ul>
+					<li><button aria-hidden="true"><img src="images/cross.png" alt="klik menu weg"></button></li>
+					<li> <a href="https://www.sidemenclothing.com/collections/new">New</a></li>
+					<li> <a href="https://www.sidemenclothing.com/collections/sideplus">Side+</a></li>
+					<li> <a href="https://www.sidemenclothing.com/collections/sdmn-x-ellesse">SDMN x Ellesse</a></li>
+					<li> <a href="https://www.sidemenclothing.com/collections/types?q=Mens">Mens</a></li>
+					<li> <a href="https://www.sidemenclothing.com/collections/types?q=Womens">Womens</a></li>
+					<li> <a href="https://www.sidemenclothing.com/collections/types?q=Kids">Kids</a></li>
+					<li> <a href="https://www.sidemenclothing.com/collections/extras">Accessoires</a></li>
+					<li> <a href="https://www.sidemenclothing.com/collections/gift-cards">Gift Cards</a></li>
+					<li> <a href="https://www.sidemenclothing.com/collections/sales">Sale</a> </li>
+					<li> <a href="https://www.sidemenclothing.com/pages/contact-us">Support</a> </li>
+				</ul>
+	
+				<button><img src="images/search.png" alt=""></button>
+				<a href="index.html"><img src="images/SDMN-banner.png" alt="Sidemen logo banner"></a>
+				<a href="https://www.sidemenclothing.com/account/login"><img src="images/account.png" alt=""></a>
+				<a href="https://www.sidemenclothing.com/cart"><img src="images/shoppingbasket.png" alt=""></a>
+			</nav>
+		</header>
 	<main class="pagina2">
-	<section 1>
+	<section>
 		<ul>
 			<li><img src="images/ellesse1.png" alt="ellesse hoodie front"></li>
 			<li><img src="images/ellesse2.png" alt="ellesse hoodie back"></li>
@@ -42,13 +42,13 @@
 		</ul>
 	</section>
 
-	<section 2>
+	<section>
 		<p>Mens</p>
 		<h1>SDMN x Ellesse Elegante Oh Hoodie</h1>
 		<p>€60.00</p>
 	</section>
 
-	<section 3>
+	<section>
 		<h2>Size</h2>
 		<ul>
 			<li><input type="radio" name="size" value="xs" id="xs"><label for="xs">XS</label></li>
@@ -60,23 +60,23 @@
 		</ul>
 	</section>
 
-	<section 4>
+	<section>
 		<h2>Quantity</h2>
 		<button class="min"><img src="images/minus.png" alt="remove 1 hoodie"></button>
 		<p id="hoeveelheid">0</p>
 		<button class="plus"><img src="images/plus.png" alt="add 1 hoodie"></button>
 	</section>
 
-	<section 5>
+	<section>
 		<button>add to cart</button>
 	</section>
 
-	<section 6>
+	<section>
 		<p>Limited edition collaboration piece.</p>
 		<p>MATERIAL: 80% Cotton / 20% Polyester</p>
 	</section>
 
-	<section 7>
+	<section>
 		<h3>You may also like</h3>
 		<ul>
 			<li> <img src="images/SDMNxEllesseCamoJacket1_460x.png" alt="SDMNxEllesse Camo Jacket"> 
@@ -102,45 +102,46 @@
 	</section>
 
 </main>     
+
+<footer>
+	<h4>Sitemap</h4>
+		<ul>
+			<li> <a href="https://www.sidemenclothing.com/collections/new">New</a></li>
+			<li> <a href="https://www.sidemenclothing.com/collections/sideplus">Side+</a></li>
+			<li> <a href="https://www.sidemenclothing.com/collections/sdmn-x-ellesse">SDMN x Ellesse</a></li>
+			<li> <a href="https://www.sidemenclothing.com/collections/types?q=Mens">Mens</a></li>
+			<li> <a href="https://www.sidemenclothing.com/collections/types?q=Womens">Womens</a></li>
+			<li> <a href="https://www.sidemenclothing.com/collections/types?q=Kids">Kids</a></li>
+			<li> <a href="https://www.sidemenclothing.com/collections/extras">Accessoires</a></li>
+			<li> <a href="https://www.sidemenclothing.com/collections/gift-cards">Gift Cards</a></li>
+		</ul>
+
+	<h4>Support</h4>
+		<ul>
+			<li> <a href="https://www.sidemenclothing.com/pages/contact-us">FAQs</a></li>
+			<li> <a href="https://www.sidemenclothing.com/pages/contact-us">Contact Us</a></li>
+		</ul>
+
+	<h4>Contact Details</h4>
+		<p>support@sidemenclothing.com</p>
+	
+		<article>
+			<a href="https://www.instagram.com/sidemenclothing/"> <img src="images/2609558_instagram_social_media_social_icon_1_200x.png" alt="instagram logo, link to sidemen instagram"></a>
+			<a href="https://twitter.com/SidemenClothing"> <img src="images/4362955_twitter_logo_social_media_icon_1_200x.png" alt="twitter logo, link to sidemen twitter"></a>
+			<a href="https://www.facebook.com/SidemenClothing/"> <img src="images/4362964_facebook_fb_logo_social_media_icon_1_200x.png" alt="facebook logo, link to sidemen facebook"></a>
+			<a href="https://www.tiktok.com/@sidemenclothing?"> <img src="images/4362958_tiktok_logo_social_media_icon_1_200x.png" alt="tiktok logo, link to sidemen tiktok"></a>
+			<a href="https://www.snapchat.com/add/sdmnclothing"> <img src="images/4362957_snapchat_logo_social_media_icon_1_200x.png" alt="snapchat logo, link to sidemen snapchat"></a>
+			<a href="https://open.spotify.com/artist/2Thx0Avafp3zxOHBdFirqk?si=RiZjb_cMTmS4e5gdRLkFaQ&dl_branch=1&nd=1"> <img src="images/spotify-icon-png-15382_200x.png" alt="spotify logo, link to sidemen spotify"></a>
+		</article>
+
+	   <article>
+		   <p>© 2021 Sidemen Clothing. 
+			   Website Developed 
+			   by Yeliz :)</p>
+	   </article>
+	   
+	</footer>
+	
+	<script src="scripts/script.js"></script>
 </body>
-
-	<footer>
-		<h4>Sitemap</h4>
-			<ul>
-				<li> <a href="https://www.sidemenclothing.com/collections/new">New</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/sideplus">Side+</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/sdmn-x-ellesse">SDMN x Ellesse</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/types?q=Mens">Mens</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/types?q=Womens">Womens</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/types?q=Kids">Kids</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/extras">Accessoires</a></li>
-				<li> <a href="https://www.sidemenclothing.com/collections/gift-cards">Gift Cards</a></li>
-			</ul>
-
-		<h4>Support</h4>
-			<ul>
-				<li> <a href="https://www.sidemenclothing.com/pages/contact-us">FAQs</a></li>
-				<li> <a href="https://www.sidemenclothing.com/pages/contact-us">Contact Us</a></li>
-			</ul>
-
-		<h4>Contact Details</h4>
-			<p>support@sidemenclothing.com</p>
-		
-			<article>
-				<a href="https://www.instagram.com/sidemenclothing/"> <img src="images/2609558_instagram_social_media_social_icon_1_200x.png" alt="instagram logo, link to sidemen instagram"></a>
-				<a href="https://twitter.com/SidemenClothing"> <img src="images/4362955_twitter_logo_social_media_icon_1_200x.png" alt="twitter logo, link to sidemen twitter"></a>
-				<a href="https://www.facebook.com/SidemenClothing/"> <img src="images/4362964_facebook_fb_logo_social_media_icon_1_200x.png" alt="facebook logo, link to sidemen facebook"></a>
-				<a href="https://www.tiktok.com/@sidemenclothing?"> <img src="images/4362958_tiktok_logo_social_media_icon_1_200x.png" alt="tiktok logo, link to sidemen tiktok"></a>
-				<a href="https://www.snapchat.com/add/sdmnclothing"> <img src="images/4362957_snapchat_logo_social_media_icon_1_200x.png" alt="snapchat logo, link to sidemen snapchat"></a>
-				<a href="https://open.spotify.com/artist/2Thx0Avafp3zxOHBdFirqk?si=RiZjb_cMTmS4e5gdRLkFaQ&dl_branch=1&nd=1"> <img src="images/spotify-icon-png-15382_200x.png" alt="spotify logo, link to sidemen spotify"></a>
-			</article>
-
-		   <article>
-			   <p>© 2021 Sidemen Clothing. 
-				   Website Developed 
-				   by Yeliz :)</p>
-		   </article>
-		   
-		</footer>
-		<script src="scripts/script.js"></script>
 </html>
